--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.7",
     "@t3-oss/env-nextjs": "^0.10.1",
