--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
     "@hookform/resolvers": "^3.9.0",
+    "@jinglescode/nostr-chat-plugin": "^0.0.11",
     "@meshsdk/core": "^1.7.6",
     "@meshsdk/react": "^1.7.6",
     "@prisma/client": "^5.14.0",
@@ -49,7 +50,7 @@
     "@vercel/blob": "^0.23.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.11.9",
     "geist": "^1.3.0",
     "lucide-react": "^0.439.0",
     "next": "^14.2.4",
