--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@jinglescode/nostr-chat-plugin": "^0.0.11",
     "@meshsdk/core": "^1.7.19",
     "@meshsdk/react": "^1.7.19",
+    "@octokit/core": "^6.1.2",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
