--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@jinglescode/nostr-chat-plugin": "^0.0.11",
     "@meshsdk/core": "^1.8.5",
+    "@meshsdk/core-csl": "^1.9.0-beta.1",
     "@meshsdk/react": "^1.8.5",
     "@octokit/core": "^6.1.2",
     "@prisma/client": "^5.14.0",
