--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "@vercel/blob": "^0.23.4",
+    "busboy": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.11.9",
     "geist": "^1.3.0",
     "lucide-react": "^0.439.0",
@@ -59,6 +61,7 @@
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.0",
     "recharts": "^2.12.7",
     "superjson": "^2.2.1",
@@ -70,7 +73,9 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@types/busboy": "^1.5.4",
     "@types/eslint": "^8.56.10",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
