--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "formidable": "^3.5.2",
     "framer-motion": "^11.11.9",
     "geist": "^1.3.0",
+    "jsonld": "^8.3.3",
     "lucide-react": "^0.439.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
