--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "@vercel/blob": "^0.23.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dexie": "^4.0.11",
     "framer-motion": "^11.11.9",
     "geist": "^1.3.0",
+    "idb-keyval": "^6.2.1",
     "lucide-react": "^0.439.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
