--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/busboy": "^1.5.4",
     "@types/eslint": "^8.56.10",
     "@types/formidable": "^3.4.5",
+    "@types/jsonld": "^1.5.15",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
