--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@auth/prisma-adapter": "^1.6.0",
     "@hookform/resolvers": "^3.9.0",
     "@jinglescode/nostr-chat-plugin": "^0.0.11",
-    "@meshsdk/core": "^1.8.5",
-    "@meshsdk/core-csl": "^1.9.0-beta.1",
-    "@meshsdk/react": "^1.8.5",
+    "@meshsdk/core": "^1.9.0-beta.18",
+    "@meshsdk/core-csl": "^1.9.0-beta.18",
+    "@meshsdk/react": "^1.9.0-beta.18",
     "@octokit/core": "^6.1.2",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-accordion": "^1.2.0",
