--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@jinglescode/nostr-chat-plugin": "^0.0.11",
     "@meshsdk/core": "^1.9.0-beta.18",
     "@meshsdk/core-csl": "^1.9.0-beta.18",
+    "@meshsdk/core-cst": "^1.9.0-beta.19",
     "@meshsdk/react": "^1.9.0-beta.18",
     "@octokit/core": "^6.1.2",
     "@prisma/client": "^6.4.1",
