--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "react-hook-form": "^7.53.0",
     "recharts": "^2.12.7",
     "superjson": "^2.2.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-react": "^5.22.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.168.0",
@@ -85,6 +87,8 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-react": "^5.18.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
