--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "busboy": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "dexie": "^4.0.11",
     "formidable": "^3.5.2",
     "framer-motion": "^11.11.9",
@@ -81,6 +82,7 @@
   },
   "devDependencies": {
     "@types/busboy": "^1.5.4",
+    "@types/cors": "^2.8.18",
     "@types/eslint": "^8.56.10",
     "@types/formidable": "^3.4.5",
     "@types/jsonld": "^1.5.15",
