--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "geist": "^1.3.0",
     "idb-keyval": "^6.2.1",
     "jsonld": "^8.3.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.439.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
@@ -86,6 +87,7 @@
     "@types/eslint": "^8.56.10",
     "@types/formidable": "^3.4.5",
     "@types/jsonld": "^1.5.15",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
