--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "lucide-react": "^0.439.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
+    "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
@@ -89,6 +90,7 @@
     "@types/jsonld": "^1.5.15",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.14.10",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/swagger-jsdoc": "^6.0.4",
