feat(governance): implement ballot functionality and integrate with proposals
- Added BallotCard component for creating and managing ballots.
- Integrated ballot selection in WalletGovernanceProposal.
- Updated VoteButton to handle adding/removing proposals to/from ballots.
- Enhanced AllProposals to support ballot selection and display.
- Created API routes for ballot management including creation, deletion, and updating choices.
- Added database migration for Ballot table.
- Implemented useBallot hook for fetching and managing ballot state.
- Improved UI with responsive design for proposals and ballots.

--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.12.7",
+    "remark-gfm": "^4.0.1",
     "superjson": "^2.2.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.22.0",
