refactor(workflow): update daily balance snapshot orchestration
- Replaced the balance snapshots script with a new batch snapshot orchestrator for improved efficiency.
- Increased batch size from 3 to 10 and reduced delay between batches from 15 to 5 seconds.
- Updated failure notification to use a dedicated Discord webhook for better error tracking.
- Removed deprecated balance snapshots script and related API endpoints to streamline the codebase.

--- a/.github/workflows/daily-balance-snapshots.yml
+++ b/.github/workflows/daily-balance-snapshots.yml
@@ -27,22 +27,20 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
-      - name: Run balance snapshots
-        run: node scripts/balance-snapshots.js
+      - name: Run batch snapshot orchestration
+        run: node scripts/batch-snapshot-orchestrator.js
         env:
           API_BASE_URL: "https://multisig.meshjs.dev"
           SNAPSHOT_AUTH_TOKEN: ${{ secrets.SNAPSHOT_AUTH_TOKEN }}
-          BATCH_SIZE: 3
-          DELAY_BETWEEN_REQUESTS: 3
-          DELAY_BETWEEN_BATCHES: 15
+          BATCH_SIZE: 10
+          DELAY_BETWEEN_BATCHES: 5
           MAX_RETRIES: 3
-          REQUEST_TIMEOUT: 30
 
       - name: Notify on failure
         if: failure()
+        # Send failure notification
         run: |
           echo "❌ Daily balance snapshot job failed"
-          # Optional: Send failure notification
-          # curl -X POST -H 'Content-type: application/json' \
-          #   --data "{\"text\":\"❌ Daily balance snapshots failed. Check the GitHub Actions logs.\"}" \
-          #   ${{ secrets.DISCORD_WEBHOOK_URL }}
+          curl -X POST -H 'Content-type: application/json' \
+            --data "{\"text\":\"❌ Daily balance snapshots failed. Check the GitHub Actions logs.\"}" \
+            ${{ secrets.SNAPSHOT_ERROR_DISCORD_WEBHOOK_URL }}
