--- a/.github/workflows/daily-balance-snapshots.yml
+++ b/.github/workflows/daily-balance-snapshots.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   snapshot-balances:
     runs-on: ubuntu-latest
+    timeout-minutes: 300  # 5 hours timeout (GitHub Actions max is 6 hours)
     
     steps:
       - name: Checkout repository
@@ -27,8 +28,15 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
+      - name: Install script dependencies
+        run: |
+          cd scripts
+          npm ci
+        
       - name: Run batch snapshot orchestration
-        run: node scripts/batch-snapshot-orchestrator.js
+        run: |
+          cd scripts
+          npm start
         env:
           API_BASE_URL: "https://multisig.meshjs.dev"
           SNAPSHOT_AUTH_TOKEN: ${{ secrets.SNAPSHOT_AUTH_TOKEN }}
@@ -41,6 +49,10 @@ jobs:
         # Send failure notification
         run: |
           echo "❌ Daily balance snapshot job failed"
-          curl -X POST -H 'Content-type: application/json' \
-            --data "{\"text\":\"❌ Daily balance snapshots failed. Check the GitHub Actions logs.\"}" \
-            ${{ secrets.SNAPSHOT_ERROR_DISCORD_WEBHOOK_URL }}
+          if [ -n "${{ secrets.SNAPSHOT_ERROR_DISCORD_WEBHOOK_URL }}" ]; then
+            curl -X POST -H 'Content-type: application/json' \
+              --data "{\"text\":\"❌ Daily balance snapshots failed. Check the GitHub Actions logs.\"}" \
+              ${{ secrets.SNAPSHOT_ERROR_DISCORD_WEBHOOK_URL }} || echo "Failed to send Discord notification"
+          else
+            echo "SNAPSHOT_ERROR_DISCORD_WEBHOOK_URL not configured, skipping notification"
+          fi
