refactor(workflow): enable daily balance snapshots scheduling
- Re-enabled the daily balance snapshots workflow with a scheduled trigger at midnight UTC.
- Improved logging in the batch snapshot orchestrator to display detailed failure information for better debugging.
- Updated wallet ID logging to show a truncated version for clarity in error messages.

--- a/.github/workflows/daily-balance-snapshots.yml
+++ b/.github/workflows/daily-balance-snapshots.yml
@@ -4,9 +4,9 @@ name: Daily Balance Snapshots
 # API requests require SNAPSHOT_AUTH_TOKEN secret to be set in GitHub repository settings.
 
 on:
-  #schedule:
-    # Run at midnight UTC every day
-    #- cron: '0 0 * * *'
+  schedule:
+  # Run at midnight UTC every day
+    - cron: '0 0 * * *'
   # Allow manual triggering for testing
   workflow_dispatch:
 
