refactor(batch-snapshot): optimize batch processing and enhance error handling
- Reduced batch size from 10 to 5 for improved performance and reliability.
- Introduced a new configurable request timeout to prevent hanging requests.
- Enhanced input validation for batch parameters to ensure correct usage.
- Updated error handling to include detailed wallet structure information in failure reports.
- Improved documentation to reflect changes in batch processing and configuration options.

--- a/.github/workflows/daily-balance-snapshots.yml
+++ b/.github/workflows/daily-balance-snapshots.yml
@@ -40,9 +40,10 @@ jobs:
         env:
           API_BASE_URL: "https://multisig.meshjs.dev"
           SNAPSHOT_AUTH_TOKEN: ${{ secrets.SNAPSHOT_AUTH_TOKEN }}
-          BATCH_SIZE: 10
+          BATCH_SIZE: 5
           DELAY_BETWEEN_BATCHES: 10
           MAX_RETRIES: 3
+          REQUEST_TIMEOUT: 45
 
       - name: Notify on failure
         if: failure()
