--- a/.github/workflows/daily-balance-snapshots.yml
+++ b/.github/workflows/daily-balance-snapshots.yml
@@ -25,8 +25,6 @@ jobs:
           node-version: '18'
           cache: 'npm'
           
-      - name: Install dependencies
-        run: npm ci
         
       - name: Install script dependencies
         run: |
@@ -44,6 +42,7 @@ jobs:
           DELAY_BETWEEN_BATCHES: 10
           MAX_RETRIES: 3
           REQUEST_TIMEOUT: 45
+          ENABLE_WARM_UP: true
 
       - name: Notify on failure
         if: failure()
