--- a/.github/workflows/daily-balance-snapshots.yml
+++ b/.github/workflows/daily-balance-snapshots.yml
@@ -51,7 +51,7 @@ jobs:
           echo "❌ Daily balance snapshot job failed"
           if [ -n "${{ secrets.SNAPSHOT_ERROR_DISCORD_WEBHOOK_URL }}" ]; then
             curl -X POST -H 'Content-type: application/json' \
-              --data "{\"text\":\"❌ Daily balance snapshots failed. Check the GitHub Actions logs.\"}" \
+              --data "{\"content\":\"❌ Daily balance snapshots failed. Check the GitHub Actions logs.\"}" \
               ${{ secrets.SNAPSHOT_ERROR_DISCORD_WEBHOOK_URL }} || echo "Failed to send Discord notification"
           else
             echo "SNAPSHOT_ERROR_DISCORD_WEBHOOK_URL not configured, skipping notification"
