Update dependencies and enhance wallet functionality
- Updated package dependencies in package.json and package-lock.json, including new versions for @meshsdk/provider and @meshsdk/web3-sdk.
- Introduced optional environment variables for Blockfrost API keys in src/env.js.
- Enhanced the ConnectWallet component to support UTXOS wallet functionality, including auto-enable and manual disable features.
- Improved error handling and user feedback in various components related to wallet connections and transactions.
- Refactored user state management to include past UTXOS wallet status in zustand store.
- Updated transaction handling to ensure compatibility with both regular and UTXOS wallets across multiple components.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@meshsdk/core": "^1.9.0-beta.77",
     "@meshsdk/core-csl": "^1.9.0-beta.77",
     "@meshsdk/core-cst": "^1.9.0-beta.77",
+    "@meshsdk/provider": "^1.9.0-beta.86",
     "@meshsdk/react": "^1.9.0-beta.77",
+    "@meshsdk/web3-sdk": "^0.0.67",
     "@octokit/core": "^6.1.2",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-accordion": "^1.2.0",
