--- a/package.json
+++ b/package.json
@@ -54,11 +54,15 @@
     "@trpc/next": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "@types/d3": "^7.4.3",
+    "@types/d3-sankey": "^0.12.4",
     "@vercel/blob": "^0.23.4",
     "busboy": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "d3": "^7.9.0",
+    "d3-sankey": "^0.12.3",
     "dexie": "^4.0.11",
     "formidable": "^3.5.4",
     "framer-motion": "^11.11.9",
@@ -70,6 +74,7 @@
     "next": "^15.2.4",
     "next-auth": "^4.24.7",
     "papaparse": "^5.5.3",
+    "pinata": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
