--- a/package.json
+++ b/package.json
@@ -89,6 +89,8 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@eslint/compat": "^2.0.0",
+    "@eslint/eslintrc": "^3.3.3",
     "@jest/globals": "^30.1.2",
     "@types/busboy": "^1.5.4",
     "@types/cors": "^2.8.18",
