--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false"
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "analyze": "ANALYZE=true npm run build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
