--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "next": "^16.0.7",
     "next-auth": "^4.24.7",
     "papaparse": "^5.5.3",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.0",
     "react-markdown": "^10.1.0",
@@ -108,6 +108,8 @@
     "@types/swagger-ui-react": "^5.18.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
+    "@react-three/fiber": "^8.17.7",
+    "@react-three/drei": "^9.122.0",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.7",
     "jest": "^30.1.3",
