Update environment configuration and enhance documentation
- Expanded the .env.example file with detailed environment variable descriptions for local and Docker setups, improving clarity for developers.
- Updated README.md to reflect changes in dependencies, installation instructions, and added troubleshooting sections for database connection issues.
- Removed outdated VERCEL_DATABASE_SETUP.md to streamline documentation.
- Made GITHUB_TOKEN optional in the environment configuration to enhance flexibility.
- Cleaned up unused code and improved error handling in GitHub issue creation API.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,44 @@
-DATABASE_URL=""
-NEXT_PUBLIC_BLOCKFROST_API_KEY_MAINNET=""
-NEXT_PUBLIC_BLOCKFROST_API_KEY_PREPROD=""
-BLOB_READ_WRITE_TOKEN=""
+# Environment Variables Template
+# Copy this file to .env.local for local development (non-Docker)
+# Or use .env.dev.example / .env.prod.example for Docker Compose setups
+
+# Database Configuration
+# For local development: use localhost
+# For Docker Compose: use the service name (e.g., 'postgres')
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/multisig"
+DIRECT_URL="postgresql://postgres:postgres@localhost:5432/multisig"
+
+# Node Environment (development, test, or production)
+NODE_ENV="development"
+
+# JWT Secret (minimum 32 characters required)
+# Generate a secure secret: openssl rand -base64 32
+JWT_SECRET="your-jwt-secret-minimum-32-characters-long"
+
+# Pinata IPFS Configuration
+# Get your JWT token from https://app.pinata.cloud/
+PINATA_JWT="your-pinata-jwt-token"
+
+# GitHub Personal Access Token
+# Create one at https://github.com/settings/tokens
+# GITHUB_TOKEN="your-github-token" (Optional - for GitHub issue creation)
+
+# Blockfrost API Keys
+# Get your API keys from https://blockfrost.io/
+# These are client-side variables (exposed to browser)
+NEXT_PUBLIC_BLOCKFROST_API_KEY_MAINNET="your-blockfrost-mainnet-api-key"
+NEXT_PUBLIC_BLOCKFROST_API_KEY_PREPROD="your-blockfrost-preprod-api-key"
+
+# Optional: Skip environment validation during builds
+# Useful for Docker builds where env vars are set at runtime
+# SKIP_ENV_VALIDATION=true
+
+# Optional: NextAuth Configuration (if using NextAuth.js)
+# NEXTAUTH_SECRET="your-nextauth-secret"
+# NEXTAUTH_URL="http://localhost:3000"
+
+# Optional: Discord Integration (if using Discord features)
+# DISCORD_CLIENT_ID="your-discord-client-id"
+# DISCORD_CLIENT_SECRET="your-discord-client-secret"
+# DISCORD_BOT_TOKEN="your-discord-bot-token"
+# DISCORD_GUILD_ID="your-discord-guild-id"
