--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "three": "^0.168.0",
     "three-globe": "^2.31.1",
     "uuid": "^11.1.0",
+    "yaml": "^2.8.2",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
@@ -93,6 +94,8 @@
     "@eslint/eslintrc": "^3.3.3",
     "@jest/globals": "^30.1.2",
     "@next/bundle-analyzer": "^16.0.10",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.17.7",
     "@types/busboy": "^1.5.4",
     "@types/cors": "^2.8.18",
     "@types/eslint": "^8.56.10",
@@ -108,8 +111,6 @@
     "@types/swagger-ui-react": "^5.18.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
-    "@react-three/fiber": "^8.17.7",
-    "@react-three/drei": "^9.122.0",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.7",
     "jest": "^30.1.3",
